# puml

./: .gitignore  pyproject.toml
puml/builder/: class_model_builder.py
puml/model/: class_model.py
puml/serialiser/: table_schema.py
puml/util/: error.py
puml/writer/: __init__.py  file_writer.py
tests/fixtures/: general_class_model.puml  held-instrument.puml  schema.py  vocab.py
tests/test_builders/: test_builder.py
