[tool.poetry]
name = "puml"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyMonad = "^2.4.0"
rich = "^13.3.1"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.2.1"
pytest-env = "^0.8.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = [
    "*Test",
    "Test*",
    "Describe*",
]
python_functions = [
    "test_*",
    "it_*",
]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = [
]
testpaths = [
    "tests",
    "integration",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
